# Audio-Spatializer

./: .gitignore  CMakeLists.txt  README.md
src/: test.cpp  test.h
src/capture/: devices.cpp  devices.h  process.cpp  process.h  watcher.cpp  watcher.h
src/format/: data.h
steamaudio/lib/windows-x86/: phonon.lib
z-playground/: README.md
z-playground/Assets/: New Steam Audio Settings.asset
z-playground/Assets/Scenes/: SampleScene.unity
z-playground/Assets/Script/: MovingAudio.cs  PlayerAttribute.cs
z-playground/ProjectSettings/: ProjectSettings.asset
